-- Perfiles, centros, vols
CREATE TABLE public.perfiles (
    id UUID PRIMARY KEY REFERENCES auth.users(id) ON DELETE CASCADE,
    username VARCHAR UNIQUE NOT NULL,
    nombre VARCHAR NOT NULL,
    apellido VARCHAR NOT NULL,
    segundo_apellido VARCHAR,
    rol_app VARCHAR NOT NULL CHECK (rol_app IN ('admin', 'voluntario')),
    rol_sistema VARCHAR CHECK (rol_sistema IN ('administracion', 'coordinacion', 'direccion', 'gestion_voluntariado')),
    activo BOOLEAN NOT NULL,
    created_at TIMESTAMPTZ NOT NULL DEFAULT NOW(),
    CHECK ((rol_app = 'voluntario' AND rol_sistema IS NULL)
            OR
            (rol_app = 'admin' AND rol_sistema IS NOT NULL))
);

CREATE TABLE public.centros (
    id INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    nombre VARCHAR UNIQUE NOT NULL,
    img VARCHAR,
    estado VARCHAR NOT NULL CHECK (estado IN ('activo', 'inactivo')),
    responsable_id UUID REFERENCES public.perfiles(id) ON DELETE SET NULL,
    mapa_url VARCHAR,
    descripcion TEXT
);

CREATE TABLE public.vols (
    id UUID PRIMARY KEY REFERENCES public.perfiles(id) ON DELETE CASCADE,
    created_at TIMESTAMPTZ NOT NULL DEFAULT NOW(),
    fecha_nacimiento DATE NOT NULL,
    telefono VARCHAR,
    correo VARCHAR,
    area VARCHAR NOT NULL CHECK (area IN ('educacion', 'comunicacion')),
    rol VARCHAR NOT NULL CHECK (rol IN ('apoyo', 'lider', 'responsable')),
    tipo_voluntario VARCHAR NOT NULL CHECK (tipo_voluntario IN ('nacional', 'internacional')),
    pais_origen VARCHAR NOT NULL,
    area_estudio TEXT,
    activo BOOLEAN NOT NULL,
    horas_semana INT NOT NULL CHECK (horas_semana >= 0 AND horas_semana <= 40),
    faltas INT CHECK (faltas >=0 AND faltas <= 3),
    centro_preferido_id INT REFERENCES public.centros(id) ON DELETE SET NULL,
    comentarios TEXT,

    -- A volunteer must provide either phone number or email
    CHECK (telefono IS NOT NULL
        OR correo IS NOT NULL),
    
    -- Phone numbers can't be blank and must include country code and have valid formatting
    CHECK ((telefono IS NULL)
        OR (NULLIF(TRIM(telefono), '') IS NOT NULL
        AND telefono ~ '^\+[1-9][0-9]{7,14}$')),

    -- Emails must have proper formatting and can't be blank
    CHECK (correo IS NULL
        OR (NULLIF(TRIM(correo), '') IS NOT NULL
        AND correo ~* '^[^[:space:]@]+@[^[:space:]@]+\.[^[:space:]@]+$'))
);

-- Enforce unique emails, make case insensitive
CREATE UNIQUE INDEX vols_correo_unique_ci
ON public.vols (LOWER(correo));

-- Temp for moving existing volunteers to new system
CREATE TABLE public.migration_voluntarios (
    -- could consider making this pk, will revisit
    legacy_vol_id VARCHAR UNIQUE NOT NULL,
    legacy_vol_usuario VARCHAR UNIQUE NOT NULL,
    new_uuid UUID UNIQUE NOT NULL REFERENCES public.perfiles(id)
);

-- Servicios and centros
CREATE TABLE public.servicios_centro (
    id INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    centro_id INT NOT NULL REFERENCES public.centros(id) ON DELETE CASCADE,
    nombre VARCHAR NOT NULL,
    turno VARCHAR NOT NULL CHECK (turno IN ('manana', 'mediodia', 'tarde')),
    horario VARCHAR NOT NULL
);

CREATE TABLE public.servicios_centro_dias (
    servicio_id INT NOT NULL REFERENCES public.servicios_centro(id) ON DELETE CASCADE,
    dia VARCHAR NOT NULL CHECK (dia IN ('lunes', 'martes', 'miercoles', 'jueves', 'viernes', 'sabado', 'domingo')),
    PRIMARY KEY (servicio_id, dia)
);

-- Volunteer preferences and availability
CREATE TABLE public.voluntario_centro (
    vol_id UUID NOT NULL REFERENCES public.vols(id) ON DELETE CASCADE,
    centro_id INT NOT NULL REFERENCES public.centros(id) ON DELETE CASCADE,
    PRIMARY KEY (vol_id, centro_id)
);

CREATE TABLE public.disponibilidad_voluntario (
    vol_id UUID NOT NULL REFERENCES public.vols(id) ON DELETE CASCADE,
    dia VARCHAR NOT NULL CHECK (dia IN ('lunes', 'martes', 'miercoles', 'jueves', 'viernes', 'sabado', 'domingo')),
    bloque VARCHAR NOT NULL CHECK (bloque IN ('manana', 'mediodia', 'tarde')),
    PRIMARY KEY (vol_id, dia, bloque)
);

CREATE TABLE public.confirmacion_semanal (
    id INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    vol_id UUID NOT NULL REFERENCES public.vols(id) ON DELETE CASCADE,
    centro_id INT REFERENCES public.centros(id) ON DELETE SET NULL,
    semana_inicio DATE NOT NULL,
    bloque VARCHAR NOT NULL CHECK (bloque IN ('manana', 'mediodia', 'tarde')),
    observaciones TEXT,
    validado BOOLEAN NOT NULL,
    created_at TIMESTAMPTZ NOT NULL DEFAULT NOW(),
    UNIQUE (vol_id, semana_inicio, bloque)
);

CREATE TABLE public.confirmacion_dia (
    id INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    confirmacion_id INT NOT NULL REFERENCES public.confirmacion_semanal(id) ON DELETE CASCADE,
    dia VARCHAR NOT NULL CHECK (dia IN ('lunes', 'martes', 'miercoles', 'jueves', 
                                        'viernes', 'sabado', 'domingo')),
    estado VARCHAR NOT NULL CHECK (estado IN ('confirmado', 'asistio', 'falta')),
    UNIQUE (confirmacion_id, dia)
);

-- Comunicados
CREATE TABLE public.comunicados (
    id INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    created_at TIMESTAMPTZ NOT NULL DEFAULT NOW(),
    fecha DATE NOT NULL,
    titulo TEXT NOT NULL,
    contenido TEXT NOT NULL,
    tipo VARCHAR NOT NULL CHECK (tipo IN ('general', 'urgente', 'evento', 'logro')),
    autor VARCHAR NOT NULL,
    destinatario VARCHAR NOT NULL CHECK (destinatario IN ('todos', 'activos', 'inactivos', 'internacional', 'centro'))
);

CREATE TABLE public.comunicados_centro (
    comunicado_id INT NOT NULL REFERENCES public.comunicados(id) ON DELETE CASCADE,
    centro_id INT NOT NULL REFERENCES public.centros(id) ON DELETE CASCADE,
    PRIMARY KEY (comunicado_id, centro_id)
);

CREATE TABLE public.comunicado_canales (
    comunicado_id INT NOT NULL REFERENCES public.comunicados(id) ON DELETE CASCADE,
    canal VARCHAR NOT NULL CHECK (canal IN ('correo', 'whatsapp')),
    PRIMARY KEY (comunicado_id, canal)
);

-- Actividades and related tables
CREATE TABLE public.actividades (
  id INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  fecha DATE NOT NULL,
  actividad TEXT NOT NULL,
  grupo_edad VARCHAR CHECK (grupo_edad IN ('pequeno', 'mediano', 'todo')),
  estado VARCHAR NOT NULL CHECK (estado IN ('pendiente', 'en_proceso', 'completado')),
  observaciones TEXT,
  tipo VARCHAR CHECK (tipo IN ('social', 'reunion', 'limpieza', 'construccion', 
                        'mantenimiento', 'huerto', 'jardineria', 'primeros_auxilios', 
                        'fraternizacion', 'nutricion'))  
);

CREATE TABLE public.actividades_centros (
    actividad_id INT NOT NULL REFERENCES public.actividades(id) ON DELETE CASCADE,
    centro_id INT NOT NULL REFERENCES public.centros(id) ON DELETE CASCADE,
    PRIMARY KEY (actividad_id, centro_id)
);

CREATE TABLE public.actividades_voluntarios (
    actividad_id INT NOT NULL REFERENCES public.actividades(id) ON DELETE CASCADE,
    vol_id UUID NOT NULL REFERENCES public.vols(id) ON DELETE CASCADE,
    rol VARCHAR NOT NULL CHECK (rol IN ('lider', 'apoyo', 'auxiliar', 
                                'educador', 'responsable')),
    PRIMARY KEY (actividad_id, vol_id)
);

CREATE TABLE public.actividades_materiales (
    actividad_id INT NOT NULL REFERENCES public.actividades(id) ON DELETE CASCADE,
    material VARCHAR NOT NULL,
    conseguido BOOLEAN NOT NULL,
    PRIMARY KEY (actividad_id, material)
);

-- Tareas
CREATE TABLE public.tareas (
    id INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    semana_inicio DATE NOT NULL,
    texto TEXT NOT NULL,
    completado BOOLEAN NOT NULL,
    created_at TIMESTAMPTZ NOT NULL DEFAULT NOW()
);

-- Documentation
CREATE TABLE public.documentos_politica (
    id INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    titulo VARCHAR NOT NULL,
    version VARCHAR,
    url VARCHAR NOT NULL,
    created_at TIMESTAMPTZ NOT NULL DEFAULT NOW()
);

CREATE TABLE public.aceptaciones_politica (
    vol_id UUID NOT NULL REFERENCES public.vols(id) ON DELETE CASCADE,
    documento_politica_id INT NOT NULL REFERENCES public.documentos_politica(id)
    aceptado_at TIMESTAMPTZ NOT NULL,
    PRIMARY KEY (vol_id, documento_politica_id)
);

CREATE TABLE public.documentos_adjuntos (
    id INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    titulo VARCHAR NOT NULL,
    url VARCHAR NOT NULL,
    created_at TIMESTAMPTZ NOT NULL DEFAULT NOW()
);

-- Direct messaging
CREATE TABLE public.conversaciones (
    id INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    vol_id UUID NOT NULL REFERENCES public.vols(id),
    responsable_id UUID NOT NULL REFERENCES public.perfiles(id),
    created_at TIMESTAMPTZ NOT NULL DEFAULT NOW(),
    UNIQUE (vol_id, responsable_id)
);

CREATE TABLE public.mensajes (
    id INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    conversacion_id INT NOT NULL REFERENCES public.conversaciones(id) ON DELETE CASCADE,
    sender_id UUID NOT NULL REFERENCES public.perfiles(id),
    contenido TEXT NOT NULL,
    created_at TIMESTAMPTZ NOT NULL DEFAULT NOW(),
    leido_at TIMESTAMPTZ,
    reply_to_id INT NULL REFERENCES public.mensajes(id),
    unsent_at TIMESTAMPTZ,
    edited_at TIMESTAMPTZ
);

CREATE TABLE public.mensajes_reportes (
    id INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    mensaje_id INT NOT NULL REFERENCES public.mensajes(id) ON DELETE CASCADE,
    reportado_por UUID NOT NULL REFERENCES public.perfiles(id),
    motivo VARCHAR NOT NULL CHECK (motivo IN ('inapropiado', 'acoso', 'spam', 'otro')),
    descripcion TEXT,
    created_at TIMESTAMPTZ NOT NULL DEFAULT NOW(),
    UNIQUE (mensaje_id, reportado_por)
);

-- Notifications
CREATE TABLE public.notificaciones (
    id INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    user_id UUID NOT NULL REFERENCES public.perfiles(id),
    tipo VARCHAR NOT NULL CHECK (tipo IN ('centro_asignado', 'horario_modificado','confirmacion_validada',
                                          'asistencia_actualizada', 'nuevo_comunicado','nuevo_mensaje', 'registro_completado')),
    titulo VARCHAR NOT NULL,
    mensaje TEXT NOT NULL,
    created_at TIMESTAMPTZ NOT NULL DEFAULT NOW(),
    leido_at TIMESTAMPTZ,
    confirmacion_semanal_id INT REFERENCES public.confirmacion_semanal(id),
    confirmacion_dia_id INT REFERENCES public.confirmacion_dia(id),
    comunicado_id INT REFERENCES public.comunicados(id),
    conversacion_id INT REFERENCES public.conversaciones(id),
    perfil_id UUID REFERENCES public.perfiles(id)
);